#
# Common CMakeLists.txt
#

add_library(Common STATIC
    "CriticalSection.cpp"
    "DateTimeClass.cpp"
    "FileClass.cpp"
    "HighResTimeStamp.cpp"
    "IniFileClass.cpp"
    "LogClass.cpp"
    "md5.cpp"
    "MemoryManagement.cpp"
    "MemTest.cpp"
    "path.cpp"
    "Platform.cpp"
    "Random.cpp"
    "stdafx.cpp"
    "StdString.cpp"
    "SyncEvent.cpp"
    "Thread.cpp"
    "Trace.cpp"
    "Util.cpp"
)