#
# Project64-core CMakeLists.txt
#

GENERATE_VERSION_H()

add_library(Project64-core STATIC
    "3rdParty/7zip.cpp"
    "AppInit.cpp"
    "Logging.cpp"
    "MemoryExceptionFilter.cpp"
    "Multilanguage/LanguageClass.cpp"
    "N64System/CheatClass.cpp"
    "N64System/EmulationThread.cpp"
    "N64System/FramePerSecondClass.cpp"
    "N64System/Interpreter/InterpreterCPU.cpp"
    "N64System/Interpreter/InterpreterOps.cpp"
    "N64System/Interpreter/InterpreterOps32.cpp"
    "N64System/Mips/Audio.cpp"
    "N64System/Mips/Disk.cpp"
    "N64System/Mips/Dma.cpp"
    "N64System/Mips/Eeprom.cpp"
    "N64System/Mips/FlashRam.cpp"
    "N64System/Mips/GBCart.cpp"
    "N64System/Mips/MemoryVirtualMem.cpp"
    "N64System/Mips/Mempak.cpp"
    "N64System/Mips/OpcodeName.cpp"
    "N64System/Mips/PifRam.cpp"
    "N64System/Mips/RegisterClass.cpp"
    "N64System/Mips/Rumblepak.cpp"
    "N64System/Mips/Sram.cpp"
    "N64System/Mips/SystemEvents.cpp"
    "N64System/Mips/SystemTiming.cpp"
    "N64System/Mips/TLBclass.cpp"
    "N64System/Mips/Transferpak.cpp"
    "N64System/N64Class.cpp"
    "N64System/N64DiskClass.cpp"
    "N64System/N64RomClass.cpp"
    "N64System/ProfilingClass.cpp"
    "N64System/Recompiler/Arm/ArmOps.cpp"
    "N64System/Recompiler/Arm/ArmRecompilerOps.cpp"
    "N64System/Recompiler/Arm/ArmRegInfo.cpp"
    "N64System/Recompiler/CodeBlock.cpp"
    "N64System/Recompiler/CodeSection.cpp"
    "N64System/Recompiler/FunctionInfo.cpp"
    "N64System/Recompiler/FunctionMapClass.cpp"
    "N64System/Recompiler/LoopAnalysis.cpp"
    "N64System/Recompiler/RecompilerClass.cpp"
    "N64System/Recompiler/RecompilerCodeLog.cpp"
    "N64System/Recompiler/RecompilerMemory.cpp"
    "N64System/Recompiler/RegBase.cpp"
    "N64System/Recompiler/SectionInfo.cpp"
    "N64System/Recompiler/x86/x86ops.cpp"
    "N64System/Recompiler/x86/x86RecompilerOps.cpp"
    "N64System/Recompiler/x86/x86RegInfo.cpp"
    "N64System/SpeedLimiterClass.cpp"
    "N64System/SystemGlobals.cpp"
    "Plugins/AudioPlugin.cpp"
    "Plugins/ControllerPlugin.cpp"
    "Plugins/GFXPlugin.cpp"
    "Plugins/PluginBase.cpp"
    "Plugins/PluginClass.cpp"
    "Plugins/RSPPlugin.cpp"
    "RomList/RomList.cpp"
    "Settings.cpp"
    "Settings/DebugSettings.cpp"
    "Settings/GameSettings.cpp"
    "Settings/LoggingSettings.cpp"
    "Settings/N64SystemSettings.cpp"
    "Settings/RecompilerSettings.cpp"
    "Settings/SettingType/SettingsType-Application.cpp"
    "Settings/SettingType/SettingsType-ApplicationIndex.cpp"
    "Settings/SettingType/SettingsType-ApplicationPath.cpp"
    "Settings/SettingType/SettingsType-Cheats.cpp"
    "Settings/SettingType/SettingsType-Enhancements.cpp"
    "Settings/SettingType/SettingsType-GameSetting.cpp"
    "Settings/SettingType/SettingsType-GameSettingIndex.cpp"
    "Settings/SettingType/SettingsType-RDBCpuType.cpp"
    "Settings/SettingType/SettingsType-RDBOnOff.cpp"
    "Settings/SettingType/SettingsType-RDBRamSize.cpp"
    "Settings/SettingType/SettingsType-RDBSaveChip.cpp"
    "Settings/SettingType/SettingsType-RDBYesNo.cpp"
    "Settings/SettingType/SettingsType-RelativePath.cpp"
    "Settings/SettingType/SettingsType-RomDatabase.cpp"
    "Settings/SettingType/SettingsType-RomDatabaseIndex.cpp"
    "Settings/SettingType/SettingsType-RomDatabaseSetting.cpp"
    "Settings/SettingType/SettingsType-SelectedDirectory.cpp"
    "Settings/SettingType/SettingsType-TempBool.cpp"
    "Settings/SettingType/SettingsType-TempNumber.cpp"
    "Settings/SettingType/SettingsType-TempString.cpp"
    "stdafx.cpp"
    "Version.h"
)