#
# Project64-video CMakeLists.txt
#

GENERATE_VERSION_H()

add_library(Project64-video SHARED
    "Android.cpp"
    "CRC.cpp"
    "F3DTEXA.cpp"
    "Renderer/OGLcombiner.cpp"
    "Renderer/OGLgeometry.cpp"
    "Renderer/OGLglitchmain.cpp"
    "Renderer/OGLtextures.cpp"
    "Renderer/Renderer.cpp"
    "ScreenResolution.cpp"
    "Settings.cpp"
    "TexCache.cpp"
    "Config.cpp"
    "3dmath.cpp"
    "Combine.cpp"
    "Debugger.cpp"
    "DepthBufferRender.cpp"
    "Ext_TxFilter.cpp"
    "FBtoScreen.cpp"
    "Main.cpp"
    "rdp.cpp"
    "TexBuffer.cpp"
    "TextureEnhancer/tc-1.1+/dxtn.c"
    "TextureEnhancer/tc-1.1+/fxt1.c"
    "TextureEnhancer/tc-1.1+/texstore.c"
    "TextureEnhancer/tc-1.1+/wrapper.c"
    "TextureEnhancer/TextureFilters.cpp"
    "TextureEnhancer/TextureFilters_2xsai.cpp"
    "TextureEnhancer/TextureFilters_hq2x.cpp"
    "TextureEnhancer/TextureFilters_hq4x.cpp"
    "TextureEnhancer/TxCache.cpp"
    "TextureEnhancer/TxDbg.cpp"
    "TextureEnhancer/TxFilter.cpp"
    "TextureEnhancer/TxFilterExport.cpp"
    "TextureEnhancer/TxHiResCache.cpp"
    "TextureEnhancer/TxImage.cpp"
    "TextureEnhancer/TxQuantize.cpp"
    "TextureEnhancer/TxReSample.cpp"
    "TextureEnhancer/TxTexCache.cpp"
    "TextureEnhancer/TxUtil.cpp"
    "trace.cpp"
    "turbo3D.cpp"
    "ucode.cpp"
    "ucode00.cpp"
    "ucode01.cpp"
    "ucode02.cpp"
    "ucode03.cpp"
    "ucode04.cpp"
    "ucode05.cpp"
    "ucode06.cpp"
    "ucode07.cpp"
    "ucode08.cpp"
    "ucode09.cpp"
    "ucode09rdp.cpp"
    "ucodeFB.cpp"
    "Util.cpp"
    "Version.h"
    "Project64-video.rc"
)

target_link_libraries(Project64-video png zlib Common Settings)
target_compile_definitions(Project64-video PRIVATE __MSC__)