#
# Project64 CMakeLists.txt
#

add_executable(Project64 WIN32
    "UserInterface/Debugger/CPULog.cpp"
    "UserInterface/Debugger/Debugger-CPULogView.cpp"
    "main.cpp"
    "Multilanguage/LanguageSelector.cpp"
    "Plugins/PluginList.cpp"
    "Settings/GuiSettings.cpp"
    "Settings/NotificationSettings.cpp"
    "Settings/UISettings.cpp"
    "stdafx.cpp"
    "UserInterface/CheatClassUI.cpp"
    "UserInterface/Debugger/Assembler.cpp"
    "UserInterface/Debugger/Breakpoints.cpp"
    "UserInterface/Debugger/Debugger-AddBreakpoint.cpp"
    "UserInterface/Debugger/Debugger-AddSymbol.cpp"
    "UserInterface/Debugger/Debugger-Commands.cpp"
    "UserInterface/Debugger/Debugger-DMALogView.cpp"
    "UserInterface/Debugger/Debugger-ExceptionBreakpoints.cpp"
    "UserInterface/Debugger/Debugger-MemoryDump.cpp"
    "UserInterface/Debugger/Debugger-MemorySearch.cpp"
    "UserInterface/Debugger/Debugger-RegisterTabs.cpp"
    "UserInterface/Debugger/Debugger-Scripts.cpp"
    "UserInterface/Debugger/Debugger-StackTrace.cpp"
    "UserInterface/Debugger/Debugger-StackView.cpp"
    "UserInterface/Debugger/Debugger-Symbols.cpp"
    "UserInterface/Debugger/Debugger-TLB.cpp"
    "UserInterface/Debugger/Debugger-ViewMemory.cpp"
    "UserInterface/Debugger/Debugger.cpp"
    "UserInterface/Debugger/DebugMMU.cpp"
    "UserInterface/Debugger/DMALog.cpp"
    "UserInterface/Debugger/MemoryScanner.cpp"
    "UserInterface/Debugger/ScriptHook.cpp"
    "UserInterface/Debugger/ScriptInstance.cpp"
    "UserInterface/Debugger/ScriptSystem.cpp"
    "UserInterface/Debugger/Symbols.cpp"
    "UserInterface/EnhancementConfig.cpp"
    "UserInterface/MainWindow.cpp"
    "UserInterface/LoggingUI.cpp"
    "UserInterface/MainMenu.cpp"
    "UserInterface/MenuClass.cpp"
    "UserInterface/MenuShortCuts.cpp"
    "UserInterface/Notification.cpp"
    "UserInterface/RomBrowserClass.cpp"
    "UserInterface/RomInformationClass.cpp"
    "UserInterface/SettingsConfig.cpp"
    "UserInterface/Settings/SettingsPage-AdvancedOptions.cpp"
    "UserInterface/Settings/SettingsPage-Defaults.cpp"
    "UserInterface/Settings/SettingsPage-Directories.cpp"
    "UserInterface/Settings/SettingsPage-DiskDrive.cpp"
    "UserInterface/Settings/SettingsPage-Game-General.cpp"
    "UserInterface/Settings/SettingsPage-Game-Plugin.cpp"
    "UserInterface/Settings/SettingsPage-Game-Recompiler.cpp"
    "UserInterface/Settings/SettingsPage-Game-Status.cpp"
    "UserInterface/Settings/SettingsPage-GameBrowser.cpp"
    "UserInterface/Settings/SettingsPage-KeyboardShortcuts.cpp"
    "UserInterface/Settings/SettingsPage-Options.cpp"
    "UserInterface/Settings/SettingsPage-Plugin.cpp"
    "UserInterface/Settings/SettingsPage.cpp"
    "UserInterface/SupportEnterCode.cpp"
    "UserInterface/SupportWindow.cpp"
    "UserInterface/WTLControls/EditNumber32.cpp"
    "UserInterface/WTLControls/HexEditCtrl.cpp"
    "UserInterface/WTLControls/ModifiedEditBox.cpp"
    "UserInterface/WTLControls/PartialGroupBox.cpp"
    "UserInterface/UIResources.rc"
    "Project64.exe.manifest"
    "../Project64-core/Version.h"
)

target_link_libraries(Project64 7zip duktape png zlib Common Project64-core)